# scripty-dpy-v2

./: README.md  main.py  pyproject.toml  requirements.txt
cogs/: bot.py  fun.py
web/: server.py
web/static/: style.css
web/templates/: index.html
