[tool.poetry]
name = "repl_python3_empyrean"
version = "0.1.0"
description = ""
authors = ["GoogleGenius <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = {git = "https://github.com/Rapptz/discord.py.git"}
Flask = "^2.0.3"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
